--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -32,6 +32,8 @@
                     <li><a class="dropdown-item" href="#">Sign out</a></li>
                 </ul>
             </div>
+            {{else}}
+            <a href="/auth/login" class="btn btn-outline-primary">Iniciar Sesion</a>
             {{/if}}
         </div>
     </div>
