--- a/views/partials/productCard.hbs
+++ b/views/partials/productCard.hbs
@@ -1,10 +1,10 @@
-<div class="col-md-3 col-sm-6 mb-4">
+<div class="col-md-4 col-sm-6 mb-4">
     <div class="card  h-100">
         <img src="{{image}}" class="card-img-top img-product" alt="...">
         <div class="card-body">
             <h5 class="card-title">{{title}}</h5>
             <p class="card-text line-clamp">{{description}}</p>
-            <a href="/pdp/{{_id}}" class="btn btn-outline-info stretched-link">Ver detalles</a>
+            <a href="/pdp/{{_id}}" class="btn d-block btn-outline-info stretched-link">Ver detalles</a>
         </div>
     </div>
 </div>
