--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,20 +1,36 @@
-<div class="container d-flex justify-content-center">
-    <form action="/auth/login" method="post" class="w-50 d-flex flex-column mt-5 needs-validation" novalidate>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" name="email" id="email" class="form-control" required>
-            <div class="invalid-feedback">
-                Por favor ingrese un email
+<section class="vh-100">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 px-0 d-none d-sm-block">
+                <img src="/images/login.jpg" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
             </div>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" name="password" id="password" class="form-control" required>
-            <div class="invalid-feedback">
-                Por favor ingrese una contraseña
+            <div class="col-sm-6 text-black">
+                <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 pt-5 pt-xl-0 mt-xl-n5">
+
+                    <form action="/auth/login" method="post" style="width: 23rem;">
+
+                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Iniciar Sesion</h3>
+
+                        <div class="form-outline mb-4">
+                            <input type="email" id="form2Example17" name="email" class="form-control form-control-lg" />
+                            <label class="form-label" for="form2Example17">Email</label>
+                        </div>
+
+                        <div class="form-outline mb-4">
+                            <input type="password" id="form2Example27" name="password" class="form-control form-control-lg" />
+                            <label class="form-label" for="form2Example27">Contraseña</label>
+                        </div>
+
+                        <div class="pt-1 mb-4">
+                            <button class="btn btn-outline-info btn-lg btn-block" type="submit">Iniciar Sesion</button>
+                        </div>
+                        <span class="text-danger mb-3">{{errorMessage}}</span>
+                        <p class="small mb-5 pb-lg-2"><a class="text-muted" href="/auth/forgotpassword">Olvidaste tu contraseña?</a></p>
+                        <p>No tienes una cuenta? <a href="/auth/signup" class="link-info">Registrate aqui</a></p>
+                    </form>
+                </div>
             </div>
+
         </div>
-        <span class="text-danger mb-3">{{errorMessage}}</span>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
+    </div>
+</section>
