--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,34 +1,52 @@
-<div class="container d-flex justify-content-center">
-    <form action="/auth/signup" method="post" class="w-50 d-flex flex-column mt-5 needs-validation" novalidate>
-        <div class="mb-3">
-            <label for="firstName" class="form-label">Nombre</label>
-            <input type="text" name="firstName" id="firstName" class="form-control" required>
-            <div class="invalid-feedback">
-                Favor de ingresar un nombre
+<section class="vh-100">
+    <div class="container-fluid">
+        <div class="row">
+
+            <div class="col-sm-6 justify-content-center d-flex text-black">
+                <div class="d-flex align-items-center h-custom-2 ms-xl-4 pt-5 pt-xl-0 mt-xl-n5">
+                    <form action="/auth/signup" method="post" style="width: 23rem;" novalidate>
+                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Registro</h3>
+                        <div class="mb-4 form-outline">
+                            <label for="firstName" class="form-label">Nombre</label>
+                            <input type="text" name="firstName" id="firstName" class="form-control form-control-lg" required>
+                            <div class="invalid-feedback">
+                                Favor de ingresar un nombre
+                            </div>
+                        </div>
+                        <div class="mb-4 form-outline">
+                            <label for="lastName" class="form-label">Apellido</label>
+                            <input type="text" name="lastName" id="lastName" class="form-control form-control-lg" required>
+                            <div class="invalid-feedback">
+                                Favor de ingresar un apellido
+                            </div>
+                        </div>
+                        <div class="mb-4 form-outline">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="text" name="email" id="email" class="form-control form-control-lg" required>
+                            <div class="invalid-feedback">
+                                Favor de ingresar un email
+                            </div>
+                        </div>
+                        <div class="mb-4 form-outline">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" name="password" id="password" class="form-control form-control-lg" required>
+                            <div class="invalid-feedback">
+                                Favor de ingresar una contraseña
+                            </div>
+                        </div>
+                        <div class="pt-1 mb-4">
+                            <button class="btn btn-outline-info btn-lg btn-block" type="submit">Registrarse</button>
+                        </div>
+                        <span class="text-danger mb-3">{{errorMessage}}</span>
+                        <p class="small mb-5 pb-lg-2"><a class="text-muted" href="/auth/forgotpassword">Olvidaste tu contraseña?</a></p>
+                        <p>Ya tienes una cuenta? <a href="/auth/login" class="link-info">Ingresa aqui</a></p>
+                    </form>
+
+                </div>
+            </div>
+            <div class="col-sm-6 px-0 d-none d-sm-block">
+                <img src="/images/signup.jpg" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
             </div>
         </div>
-        <div class="mb-3">
-            <label for="lastName" class="form-label">Apellido</label>
-            <input type="text" name="lastName" id="lastName" class="form-control" required>
-            <div class="invalid-feedback">
-                Favor de ingresar un apellido
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="text" name="email" id="email" class="form-control" required>
-            <div class="invalid-feedback">
-                Please provide a email
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" name="password" id="password" class="form-control" required>
-            <div class="invalid-feedback">
-                Please provide a Password
-            </div>
-        </div>
-        <span class="text-danger mb-3">{{errorMessage}}</span>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
+    </div>
+</section>
