--- a/views/cart/cart.hbs
+++ b/views/cart/cart.hbs
@@ -1,3 +1,120 @@
-<div>
-    Soy un carrito en construccion
-</div>
+{{> header}}
+<section class="section-pagetop bg">
+    <div class="container">
+        <h2 class="my-5">Mi carrito</h2>
+    </div>
+</section>
+
+<section class="section-content padding-y">
+    <div class="container">
+
+        <div class="row">
+            <main class="col-md-9">
+                <div class="card">
+                    {{#if products}}
+                    <table class="table table-borderless table-shopping-cart">
+                        <thead class="text-muted">
+                            <tr class="small text-uppercase">
+                                <th scope="col">Producto</th>
+                                <th scope="col" class="text-center" width="120">Cantidad</th>
+                                <th scope="col" class="text-center" width="120">Precio</th>
+                                <th scope="col" class="text-right" width="200"> </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each products}}
+                            <tr>
+                                <td>
+                                    <figure class="itemside">
+                                        <div class="aside"><img src="{{this/product/image}}" class="img-sm" /></div>
+                                        <figcaption class="info">
+                                            <a href="/pdp/{{this/product/_id}}" class="title text-dark">{{this/product/title}}</a>
+                                            <p class="text-muted small">{{this/product/category}}</p>
+                                        </figcaption>
+                                    </figure>
+                                </td>
+                                <td>
+                                    <p class="text-center"><strong>{{this/quantity}}</strong></p>
+                                </td>
+                                <td>
+                                    <p class="text-center">
+
+                                        <strong>${{this/product/price}}</strong>
+                                    </p>
+                                    </p>
+                                </td>
+                                <td class="d-flex justify-content-center">
+                                    <form action="/cart/remove" method="post">
+                                        <input type="text" name="productId" id="productId" class="invisible form-control h-0 p-0" value="{{this/product/_id}}">
+                                        <button type="submit" class="btn btn-danger">Remove</button>
+                                    </form>
+                                </td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+
+                    <div class="card-body d-flex  justify-content-between border-top">
+                        <a href="/plp" class="btn btn-outline-info"> <i class="fa fa-chevron-left"></i> Continua Comprando </a>
+                        <a href="/checkout" class="btn btn-outline-dark "> Realizar Compra <i class="fa fa-chevron-right"></i> </a>
+                    </div>
+                    {{else}}
+                    <div class="d-flex justify-content-center">
+                        <img src="/images/cart.png" class=" img-fluid" alt="">
+
+                    </div>
+                    <h2 class="text-center">Carrito Vacio</h2>
+                    <div class="card-body d-flex  justify-content-between border-top">
+                        <a href="/plp" class="btn btn-outline-info"> <i class="fa fa-chevron-left"></i> Continua Comprando </a>
+                    </div>
+                    {{/if}}
+                </div>
+
+                <div class="alert alert-success mt-3">
+                    <p class="icontext"><i class="icon text-success fa fa-truck"></i> Envio gratis entre 1 - 2 semanas</p>
+                </div>
+
+            </main>
+            <aside class="col-md-3">
+                {{!-- <div class="card mb-3">
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label>Have coupon?</label>
+                                <div class="input-group">
+                                    <input type="text" class="form-control" name="" placeholder="Coupon code" />
+                                    <span class="input-group-append">
+                                        <button class="btn btn-primary">Apply</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div> --}}
+                <div class="card">
+                    <div class="card-body">
+                        {{!-- <dl class="dlist-align">
+                            <dt>Precio Total</dt>
+                            <dd class="text-right">USD 568</dd>
+                        </dl>
+                        <dl class="dlist-align">
+                            <dt>Discount:</dt>
+                            <dd class="text-right">USD 658</dd>
+                        </dl> --}}
+                        <dl class="dlist-align">
+                            <dt>Total:</dt>
+                            <dd class="text-right  h5"><strong>${{total}}</strong></dd>
+                        </dl>
+                        <hr />
+                        <p class="text-center mb-3">
+                            <img src="/images/stripe.jpg" class="img-fluid" alt="" />
+                        </p>
+
+                    </div>
+                </div>
+            </aside>
+        </div>
+
+    </div>
+</section>
+{{> footer}}
