--- a/views/plp/plp.hbs
+++ b/views/plp/plp.hbs
@@ -1,3 +1,4 @@
+{{> header}}
 <div class="container">
     <div class="row">
         {{#each products}}
@@ -5,3 +6,4 @@
         {{/each}}
     </div>
 </div>
+{{> footer}}
