--- a/views/checkout/checkout.hbs
+++ b/views/checkout/checkout.hbs
@@ -172,12 +172,12 @@
 
                         </div>
                     </div>
-                    {{!-- <div id="card-errors" role="alert"></div> --}}
+
                 </div>
 
                 <hr class="my-4">
 
-                <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                <button class="w-100 btn btn-primary btn-lg">Continue to checkout</button>
             </form>
         </div>
     </div>
