--- a/views/checkout/checkout.hbs
+++ b/views/checkout/checkout.hbs
@@ -15,17 +15,18 @@
                 <span class="badge bg-primary rounded-pill">3</span>
             </h4>
             <ul class="list-group mb-3">
+                {{#each products}}
                 <li class="list-group-item d-flex justify-content-between lh-sm">
                     <div>
-                        <h6 class="my-0">Product name</h6>
-                        <small class="text-muted">Brief description</small>
+                        <h6 class="my-0">{{product/title}}</h6>
+                        <small class="text-muted">{{product/description}}</small>
                     </div>
-                    <span class="text-muted">$12</span>
+                    <span class="text-muted">${{product/price}}</span>
                 </li>
-
+                {{/each}}
                 <li class="list-group-item d-flex justify-content-between">
                     <span>Total (MXN)</span>
-                    <strong>$20</strong>
+                    <strong>${{total}}</strong>
                 </li>
             </ul>
 
