--- a/views/checkout/checkout.hbs
+++ b/views/checkout/checkout.hbs
@@ -1,6 +1,6 @@
 <script src="/javascripts/checkout.js"></script>
 <script src="https://js.stripe.com/v3/"></script>
-
+{{> header}}
 <div class="container py-5 ">
     <div class="text-center">
         <img class="d-block mx-auto mb-4" src="/images/icon.png" alt="" width="72" height="72">
@@ -183,3 +183,5 @@
         </div>
     </div>
 </div>
+
+{{> footer}}
