--- a/views/pdp/pdp.hbs
+++ b/views/pdp/pdp.hbs
@@ -20,10 +20,10 @@
                     {{else}}
                     <form action="/cart/add" method="post" class="d-flex">
                         <input type="text" name="productId" id="productId" class="invisible form-control w-0 h-0 p-0" value="{{_id}}">
-                        <input class="form-control text-center me-3" id="quantity" name="quantity" type="number" max="{{stock}}" style="max-width: 3rem">
+                        <input class="form-control text-center me-3" id="quantity" name="quantity" type="number" value="1" min="1" max="{{stock}}" style="max-width: 3rem">
                         <button class="btn btn-outline-dark flex-shrink-0" type="submit">
                             <i class="fas fa-cart-plus"></i>
-                            <span class="ms-2">Add to cart</span>
+                            <span class="ms-2">Añadir al carrito</span>
                         </button>
                     </form>
                     {{/ifCond}}
