--- a/views/user/user.hbs
+++ b/views/user/user.hbs
@@ -1,2 +1,11 @@
 {{> header}}
+<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+    <div class="card p-4">
+        <div class=" image d-flex flex-column justify-content-center align-items-center"> <button class="btn btn-secondary"> <img src="/images/profile.png" height="100" width="100" /></button> <span class="name mt-3">{{currentUser.name}} {{currentUser.lastName}}</span>
+
+            <div class="d-flex flex-row justify-content-center align-items-center gap-2"> <span class="idd1">{{currentUser.email}}</span> </div>
+        </div>
+    </div>
+</div>
+
 {{> footer}}
